# kipilot-mcp

./: .env.example  .gitignore  README.md  RELEASE-CHECKLIST.md  build-windows-zip.ps1  pyinstaller_entry.py  pyproject.toml  start-kipilot-mcp.ps1
.github/: copilot-instructions.md  kicad-api-capabilities.md  product-definition.md
.github/workflows/: windows-zip-release.yml
agent-test/: README.md
agent-test/.github/: copilot-instructions.md
agent-test/.github/agents/: kicad-agent.agent.md
src/kipilot_mcp/: __init__.py  config.py  errors.py  ipc_client.py  lookups.py  serializers.py  server.py
tests/: test_ipc_client.py
web/: changelog.html  docs.html  index.html  script.js  styles.css
