[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kipilot-mcp"
version = "0.1.0"
description = "Model Context Protocol server for connecting AI agents to a running KiCad instance."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "KiPilot MCP contributors" }
]
license = { file = "LICENSE" }
keywords = ["kicad", "mcp", "model-context-protocol", "pcb", "eda"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dependencies = [
  "kicad-python>=0.7.1",
  "mcp>=1.8.0"
]

[project.urls]
Homepage = "https://kipilot.org"
Repository = "https://github.com/belaszalontai/kipilot"
Documentation = "https://kipilot.org/docs.html"
Issues = "https://github.com/belaszalontai/kipilot/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[project.scripts]
kipilot-mcp = "kipilot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kipilot_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
